// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Affliction Warlock Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Affliction Warlock Analyzer analyzers AbsoluteCorruption matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers AbsoluteCorruption matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers AgonyUptime matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers AgonyUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard "
    position={2}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          Active time
        </label>
        <div
          className="flex"
          style={
            Object {
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          <div
            className="flex-main text-right text-muted"
            style={
              Object {
                "fontSize": 12,
                "paddingRight": 8,
                "paddingTop": 23,
              }
            }
          >
            Low
          </div>
          <div
            className="flex-sub"
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <svg
              fill="none"
              height="85"
              style={
                Object {
                  "fill": "none",
                }
              }
              viewBox="19 19 101 88"
              width="98"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M101.459 101.459C119.033 83.8858 119.033 55.3934 101.459 37.8198C83.8859 20.2462 55.3934 20.2462 37.8198 37.8198C20.2463 55.3934 20.2463 83.8858 37.8198 101.459"
                stroke="#f8b700"
                strokeLinecap="round"
                strokeWidth="8"
              />
              <path
                clipRule="evenodd"
                d="M68.6396 28.6396H70.6396V32.6396H68.6396V28.6396Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M87.7656 32.8389L89.5485 33.7451L87.7368 37.3097L85.9539 36.4035L87.7656 32.8389Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M101.207 50.1829L100.077 48.5324L103.378 46.2732L104.508 47.9236L101.207 50.1829Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M106.622 67.3762L106.417 65.3868L110.398 64.9765L110.603 66.966L106.622 67.3762Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M103.658 84.4276L104.376 82.5609L108.11 83.9969L107.392 85.8635L103.658 84.4276Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M52.0547 32.5298L50.2627 33.4179L52.039 37.0019L53.831 36.1137L52.0547 32.5298Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M36.1157 45.9784L34.965 47.6142L38.2354 49.9147L39.3861 48.2789L36.1157 45.9784Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M28.8926 64.968L28.6883 66.9576L32.6626 67.3657L32.8669 65.3761L28.8926 64.968Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M31.3486 84.3921L32.0806 86.2533L35.8031 84.7895L35.0711 82.9282L31.3486 84.3921Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
            </svg>
            <div
              style={
                Object {
                  "height": 32,
                  "left": "50%",
                  "marginTop": -13,
                  "position": "absolute",
                  "top": 49,
                  "transform": "translate(-50%, -50%)",
                  "width": 32,
                }
              }
            >
              <svg
                fill="none"
                height="32"
                style={
                  Object {
                    "fill": "none",
                    "margin": 0,
                    "transform": "rotate(127.9817597050826deg)",
                    "transformOrigin": "5px 27px",
                  }
                }
                viewBox="0 0 10 32"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 27C9 29.2091 7.20914 31 5 31C2.79086 31 1 29.2091 1 27C1 24.7909 2.79086 23 5 23C7.20914 23 9 24.7909 9 27Z"
                  stroke="#f8b700"
                  strokeWidth="2"
                />
                <path
                  clipRule="evenodd"
                  d="M6 0L6 23H4L4 0L6 0Z"
                  fill="#f8b700"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <div
              className="value"
              style={
                Object {
                  "fontSize": "1.25em",
                  "marginTop": -18,
                }
              }
            >
              96
              %
            </div>
          </div>
          <div
            className="flex-main text-left text-muted"
            style={
              Object {
                "fontSize": 12,
                "paddingLeft": 8,
                "paddingTop": 23,
              }
            }
          >
            High
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers ArcaneTorrent matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers ArcaneTorrent matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers CascadingCalamity matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    category="ITEMS"
    className="panel statistic small "
    position={1001}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=275372"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Cascading Calamity"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_unstableaffliction_3.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=275372"
            rel="noopener noreferrer"
            target="_blank"
          >
            Cascading Calamity
          </a>
        </label>
        <div
          className="value"
        >
          <svg
            className="icon"
            version="1.1"
            viewBox="16 16 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M33.446,23.135c-0.89,0-1.612,0.722-1.612,1.612v8.049l-4.079,4.078c-0.63,0.629-0.63,1.65,0,2.28 c0.315,0.314,0.728,0.472,1.14,0.472c0.413,0,0.825-0.157,1.14-0.472l4.551-4.55c0.302-0.302,0.472-0.712,0.472-1.14v-8.716 C35.059,23.856,34.337,23.135,33.446,23.135z M32.111,16.668c-8.509,0-15.431,6.92-15.431,15.427 c0,8.506,6.922,15.426,15.431,15.426c8.509,0,15.431-6.92,15.431-15.426C47.542,23.588,40.62,16.668,32.111,16.668z M19.179,38.606c-1.025-2.031-1.545-4.222-1.545-6.511c0-7.981,6.495-14.473,14.477-14.473v2.097 c-6.826,0-12.379,5.552-12.379,12.376c0,1.959,0.444,3.831,1.32,5.566L19.179,38.606z M32.111,43.516 c-6.3,0-11.426-5.124-11.426-11.422c0-6.298,5.126-11.422,11.426-11.422s11.426,5.124,11.426,11.422 C43.537,38.392,38.411,43.516,32.111,43.516z"
            />
          </svg>
           
          257
           
          <small>
            average Haste
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers CascadingCalamity matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers Channeling matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers Channeling matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Affliction Warlock Analyzer analyzers CooldownThroughputTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers CooldownThroughputTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers CorruptionUptime matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers CorruptionUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers Darkglare matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic flexible "
    position={4}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=205180"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/inv_beholderwarlock.jpg"
            />
             
            Summon Darkglare
          </a>
        </label>
        <div
          className="flex"
        >
          <div
            className="flex-sub value"
          >
            1,072 DPS
            <small
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "marginLeft": 7,
                }
              }
            >
              bonus damage 
              <sup>
                *
              </sup>
            </small>
          </div>
        </div>
        <div
          className="flex"
        >
          <div
            className="flex-sub value"
          >
            8.5
             
            <small>
              average DoTs extended
            </small>
          </div>
        </div>
        <div
          className="flex"
        >
          <div
            className="flex-sub value"
          >
            2,319 DPS
            <small
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "marginLeft": 7,
                }
              }
            >
              total damage 
              <sup>
                *
              </sup>
            </small>
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers Darkglare matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers Deathbolt matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic flexible "
    position={1001}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=264106"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_fire_twilightflamebolt.jpg"
            />
             
            Deathbolt
          </a>
        </label>
        <div
          className="flex"
        >
          <div
            className="flex-main value"
          >
            51,480
             
            <small>
              average damage
            </small>
          </div>
        </div>
        <div
          className="flex"
        >
          <div
            className="flex-main value"
          >
            5.37
             s 
            <small>
              average DoT length on cast
            </small>
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers Deathbolt matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers DotUptimeStatisticBox matches the statistic snapshot 1`] = `
<div
  className="col-md-6 col-sm-12 col-xs-12"
>
  <div
    className="panel statistic bar"
    position={1}
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub icon"
        >
          <a
            href="http://wowhead.com/spell=980"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Agony"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_curseofsargeras.jpg"
            />
          </a>
        </div>
        <div
          className="flex-sub value"
          style={
            Object {
              "width": 140,
            }
          }
        >
          100
           % 
          <small>
            uptime
          </small>
        </div>
        <div
          className="flex-main chart"
          style={
            Object {
              "padding": 15,
            }
          }
        >
          <div
            className="uptime-bar"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "left": "0.18079996322712613%",
                  "width": "99.79583393983037%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-sub icon"
        >
          <a
            href="http://wowhead.com/spell=172"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Corruption"
              className="icon game "
              src="/img/Icons/spell_shadow_abominationexplosion.jpg"
            />
          </a>
        </div>
        <div
          className="flex-sub value"
          style={
            Object {
              "width": 140,
            }
          }
        >
          95
           % 
          <small>
            uptime
          </small>
        </div>
        <div
          className="flex-main chart"
          style={
            Object {
              "padding": 15,
            }
          }
        >
          <div
            className="uptime-bar"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "left": "0.6178608912825306%",
                  "width": "33.222759344523524%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "35.39120975094039%",
                  "width": "0.1631796278278723%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "36.432724793344114%",
                  "width": "8.892906665849491%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "45.79755000727796%",
                  "width": "7.021320605833097%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "54.13541610805096%",
                  "width": "45.84121779500655%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-sub icon"
        >
          <a
            href="http://wowhead.com/spell=30108"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Unstable Affliction"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_unstableaffliction_3.jpg"
            />
          </a>
        </div>
        <div
          className="flex-sub value"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "paddingRight": 8,
              "width": 140,
            }
          }
        >
          79
           % 
          <small>
            uptime 
            <sup>
              *
            </sup>
          </small>
        </div>
        <div
          className="flex-main chart"
          style={
            Object {
              "padding": 15,
            }
          }
        >
          <div
            className="uptime-bar"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "left": "1.7516911691475587%",
                  "width": "23.122476653055596%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "24.98218813921597%",
                  "width": "3.0544468363836943%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "30.20048877278195%",
                  "width": "4.034673755659575%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "35.38393178631895%",
                  "width": "0.17045759244930322%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "39.80433766691437%",
                  "width": "4.916456627161364%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "49.176057794700114%",
                  "width": "4.902283748688051%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "58.84808972581226%",
                  "width": "4.854785453263975%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "64.16751576253917%",
                  "width": "5.197615892010328%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "69.47506722541006%",
                  "width": "4.032375451042281%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "74.74239835747831%",
                  "width": "3.0697688671656542%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "77.92631635396955%",
                  "width": "3.062490902544223%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "81.09031571044426%",
                  "width": "18.88631819261325%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-sub icon"
        >
          <a
            href="http://wowhead.com/spell=63106"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Siphon Life"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_requiem.jpg"
            />
          </a>
        </div>
        <div
          className="flex-sub value"
          style={
            Object {
              "width": 140,
            }
          }
        >
          93
           % 
          <small>
            uptime
          </small>
        </div>
        <div
          className="flex-main chart"
          style={
            Object {
              "padding": 15,
            }
          }
        >
          <div
            className="uptime-bar"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "left": "0.9947828485187428%",
                  "width": "33.721491446476314%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "38.60500570745647%",
                  "width": "6.720625751737135%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "46.219671955320955%",
                  "width": "7.413564593851269%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "54.57247703610637%",
                  "width": "28.726126360787855%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "83.36755253541305%",
                  "width": "14.321885222667413%",
                }
              }
            />
            <div
              style={
                Object {
                  "left": "97.80511909048425%",
                  "width": "2.1715148125732586%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers DotUptimeStatisticBox matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers DrainSoul matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers DrainSoul matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers DreadfulCalling matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers DreadfulCalling matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers GlobalCooldown matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers GlobalCooldown matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers GrimoireOfSacrifice matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers GrimoireOfSacrifice matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers Haunt matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic flexible "
    position={1004}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=48181"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_haunt.jpg"
            />
             
            Haunt
          </a>
        </label>
        <div
          className="flex"
        >
          <div
            className="flex-main value"
          >
            77.53
             % 
            <small>
              uptime
            </small>
          </div>
        </div>
        <div
          className="flex"
        >
          <div
            className="flex-main value"
          >
            1,184
             DPS 
            <small>
              6.45
               % of total
            </small>
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers Haunt matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_warlock_haunt",
    "importance": "regular",
    "issue": <React.Fragment>
      Your 
      <SpellLink
        icon={true}
        id={48181}
      />
       debuff uptime is too low. While it's usually not possible to get 100% uptime due to travel and cast time, you should aim for as much uptime on the debuff as possible.
    </React.Fragment>,
    "stat": <React.Fragment>
      77.53% Haunt uptime.
       (
      &gt; 90.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Affliction Warlock Analyzer analyzers InevitableDemise matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers InevitableDemise matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers Nightfall matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers Nightfall matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers PandemicInvocation matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers PandemicInvocation matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers PhantomSingularity matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic small "
    position={1003}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=205179"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Phantom Singularity"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/inv_enchant_voidsphere.jpg"
            />
          </a>
           Phantom Singularity damage
        </label>
        <div
          className="value"
        >
          1,064
           DPS 
          <small>
            5.80
             % of total
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers PhantomSingularity matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers ShadowEmbrace matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers ShadowEmbrace matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers SiphonLifeUptime matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers SiphonLifeUptime matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "spell_shadow_requiem",
    "importance": "minor",
    "issue": <React.Fragment>
      Your 
      <SpellLink
        icon={true}
        id={63106}
      />
       uptime can be improved. Try to pay more attention to your Siphon Life on the boss, perhaps use some debuff tracker.
    </React.Fragment>,
    "stat": <React.Fragment>
      93.08% Siphon Life uptime
       (
      &gt;95.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Affliction Warlock Analyzer analyzers SoulConduit matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers SoulConduit matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers SoulShardDetails matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic small "
    position={3}
  >
    <div
      className="panel-body"
    >
      <div
        className="flex boring-spell-value grayscale"
      >
        <div
          className="flex-sub icon"
        >
          <a
            href="http://wowhead.com/spell=246985"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Soul Shards"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/inv_misc_gem_amethyst_02.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main value"
        >
          <div>
            0
          </div>
          <small>
            Wasted Soul Shards
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers SoulShardDetails matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers SoulShardTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers SoulShardTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers SuddenOnset matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers SuddenOnset matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers UnstableAfflictionUptime matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers UnstableAfflictionUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers VileTaint matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers VileTaint matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers WrackingBrilliance matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    category="ITEMS"
    className="panel statistic small "
    position={1001}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=272891"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Wracking Brilliance"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_felmending.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=272891"
            rel="noopener noreferrer"
            target="_blank"
          >
            Wracking Brilliance
          </a>
        </label>
        <div
          className="value"
        >
          <svg
            className="icon"
            version="1.1"
            viewBox="16 17 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M28.832,44.802h6.559v-1.101h-6.559V44.802z M29.91,47.004h4.402v-1.101H29.91V47.004z M32.156,18.379c-0.012,0-0.031,0-0.045,0c-0.014,0-0.033,0-0.045,0c-1.078,0-9.704,0.127-9.704,11.01 c0,2.696,1.5,4.496,2.949,6.234c1.255,1.507,2.442,2.928,2.442,4.776V42.6h8.715v-2.202c0-1.848,1.187-3.269,2.442-4.776 c1.449-1.737,2.949-3.537,2.949-6.234C41.86,18.506,33.235,18.379,32.156,18.379z"
            />
          </svg>
           
          334
           
          <small>
            average Intellect
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers WrackingBrilliance matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer should match the checklist snapshot 1`] = `
<ul
  className="checklist"
>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Maintain your DoTs on the boss
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "96.77022163317527%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Affliction Warlocks rely on DoTs as a means of dealing damage to the target. You should try to keep as highest uptime on them as possible.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=980"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_curseofsargeras.jpg"
                  />
                   
                  Agony
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  99.80%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=172"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="/img/Icons/spell_shadow_abominationexplosion.jpg"
                  />
                   
                  Corruption
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  95.14%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=30108"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_unstableaffliction_3.jpg"
                  />
                   
                  Unstable Affliction
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  79.30%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=63106"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_requiem.jpg"
                  />
                   
                  Siphon Life
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  93.08%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#a6c34c",
                        "transition": "background-color 800ms",
                        "width": "87.08088653270106%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Don't cap your Soul Shards
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Soul Shards are your main and most important resource and since their generation is random as Affliction, it's very important not to let them cap.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Wasted shards per minute
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                  <dfn
                    className=""
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    style={Object {}}
                  >
                     
                    0.00
                     
                     
                  </dfn>
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Use your cooldowns
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Be mindful of your cooldowns if you are specced into them and use them when it's appropriate. It's okay to hold a cooldown for a little bit when the encounter requires it (burn phases), but generally speaking you should use them as much as you can.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=205180"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/inv_beholderwarlock.jpg"
                  />
                   
                  Summon Darkglare
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=113860"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_soulburn.jpg"
                  />
                   
                  Dark Soul: Misery
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  91.93%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=205179"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/inv_enchant_voidsphere.jpg"
                  />
                   
                  Phantom Singularity
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Use your utility and defensive spells
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ac1f39",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Use other spells in your toolkit to your advantage. For example, you can try to minimize necessary movement by using 
            <a
              href="http://wowhead.com/spell=111771"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
              />
               
              Demonic Gateway
            </a>
            , 
            <a
              href="http://wowhead.com/spell=268358"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
              />
               
              Demonic Circle
            </a>
            , 
            <a
              href="http://wowhead.com/spell=111400"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_deathwing_sealarmorbreachtga.jpg"
              />
               
              Burning Rush
            </a>
             or mitigate incoming damage with 
            <a
              href="http://wowhead.com/spell=104773"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
              />
               
              Unending Resolve
            </a>
            /
            <a
              href="http://wowhead.com/spell=108416"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/warlock_sacrificial_pact.jpg"
              />
               
              Dark Pact
            </a>
            .
            <br />
            While you shouldn't cast these defensives on cooldown, be aware of them and use them whenever effective. Not using them at all indicates you might not be aware of them or not using them optimally.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=48020"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccircleteleport.jpg"
                  />
                   
                  Demonic Circle Teleport
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=104773"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
                  />
                   
                  Unending Resolve
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Always be casting
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            You should try to avoid doing nothing during the fight. When you're out of Soul Shards, cast 
            <a
              href="http://wowhead.com/spell=232670"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_shadowbolt.jpg"
              />
               
              Shadow Bolt
            </a>
            /
            <a
              href="http://wowhead.com/spell=198590"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_haunting.jpg"
              />
               
              Drain Soul
            </a>
            , refresh your DoTs etc. When you have to move, use your instant abilities or try to utilize 
            <a
              href="http://wowhead.com/spell=268358"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
              />
               
              Teleport
            </a>
             or 
            <a
              href="http://wowhead.com/spell=111771"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
              />
               
              Gateway
            </a>
             to reduce the movement even further.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Downtime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  4.29%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "85.71428571428571%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                All items enchanted
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Using high quality enchants
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a second potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
